# krishi-api

./: LICENSE  Procfile  README.md  application.py  apps.py  pyproject.toml  run.sh
app/posts/: controller.py  models.py  routs.py
app/utils/: common.py  env_variables.py  response_utils.py
app/weather/: controller.py  routs.py
