[tool.poetry]
name = "krishi-api"
version = "1.0.0"
description = "Python API for Krishi App"
authors = ["Himanshu Sagar <sagarhimanshu355@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
toml = "^0.10.2"
psycopg = "^3.0.12"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
